--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: jekyll-theme-massively-src
+theme: jekyll-theme-modernist
 title: Blakwurm Entertainment
 description: We make things awesome!
